2010-01-15 Jim Garlick <garlick@llnl.gov>

	* nfsroot.spec.in : Remove bogus Requires: mkisoimage.

	* boot/pxelinux.cfg : Remove extra root=dhcp arg.

2010-01-15 Jim Garlick <garlick@llnl.gov>

	* : tag 3.6

	* dracut/xinstall : Fake root=dhcp (revert change on 2010-01-10).

	* etc/nfsroot : Remove deprecated options: NFSMOUNTOPTS, MODPROBE,
	ETH0_DEVICE, ETH0_OPTIONS, ETH_DEVICES.
	-
	* etc/initial-fstab : Remove.

	* rc/nfsroot-init : Create initial /etc/fstab if it doesn't exist.
	Don't initialize /etc/mtab as it gets cleared in rc.sysinit.

	* nfsroot.spec.in : Don't mknod /dev nodes in the image.

	* dracut/xinstall : Ignore MODPROBE sysconfig setting.

	* configpxe/nfsroot-* : Move scripts from dracut directory.

	* boot/isolinux.*, mkinitrd.*, mklivecd.* : Remove.

	* config/x_ac_dracut.m4, mkinitrd, mklivecd : Remove.

	* dracut/README : Remove lame README.

	* configure.ac, configu/nfsroot.spec.in, Makefile.am : Make dracut
	the default.

2010-01-10 Jim Garlick <garlick@llnl.gov>

	* mkinitrd/mklivecd, nfsroot.spec.in, boot/Makefile.am : Don't
	include /isolinux as part of nfsroot package.  Create it on the fly.

	* mkinitrd/mklivecd : Move from mklivecd directory since this version
	will be specific to the old initrd.

	* boot/pxelinux.cfg : Add root=dhcp to default command line.

	* dracut/xinstall : Don't add root=dhcp to the initramfs as this
	breaks livecds.

	* dracut/installkernel : Don't remove kmods installed by 
	earlier dracut modules.

	* boot/Makefile.am, nfsroot.spec.in : Don't include copies of
	syslinux binaries in package.  Copy to the appropriate locations
	in the %post scriptlet.

2010-01-10 Jim Garlick <garlick@llnl.gov>

	* : tag 3.5

	* nfsroot.spec.in : Add missing memtest86+ BuildRequires.

	* mkinitrd/Makefile.am, dracut/Makeifle.am, mklivecd/Makefile.am :
	Move scripts from /sbin to /usr/sbin.

	* dracut/nfsroot-* : Rework nfsroot-setdefault options.

2010-01-08 Jim Garlick <garlick@llnl.gov>

	* rc/nfsroot : Removed.
