@@ -1,6 +1,29 @@
 #!/bin/bash
-# rebuild - called from nfsroot %post scriptlet to rebuild initramfs's
-
+############################################################################
+# Copyright (C) 2011 Lawrence Livermore National Security, LLC
+# Produced at Lawrence Livermore National Laboratory.
+# Written by Jim Garlick <garlick@llnl.gov>.
+# UCRL-CODE-235119
+# 
+# This file is part of nfsroot, a network root file system utility.
+# 
+# nfsroot is free software; you can redistribute it and/or modify it under
+# the terms of the GNU General Public License as published by the Free
+# Software Foundation; either version 2 of the License, or (at your option)
+# any later version.
+#
+# nfsroot is distributed in the hope that it will be useful, but WITHOUT ANY
+# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+# details.
+#
+# You should have received a copy of the GNU General Public License along
+# with nfsroot; if not, write to the Free Software Foundation, Inc.,
+# 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA.
+############################################################################
+#
+# nfsroot-rebuild - called from nfsroot %post scriptlet to rebuild initramfs
+#
 PATH=/sbin:/usr/sbin:/bin/:/usr/bin
 prog=nfsroot-rebuild
 kdir=/boot
@@ -8,6 +31,10 @@ kdir=/boot
 if [ $# -ne 0 ]; then
     echo "Usage: $prog" >&2
     exit 1
+fi
+if ! [ -x /usr/sbin/nfsroot-setdefault ]; then
+   echo "${prog}: run me chrooted in root image on the server" >&2
+   exit 1
 fi
 
 kver=
