@@ -2,4 +2,8 @@ sysconfigdir = $(sysconfdir)/sysconfig
 
 sysconfig_SCRIPTS = nfsroot 
 
-EXTRA_DIST = nfsroot
+pkglibdir = @X_DATADIR@/@PACKAGE@
+
+pkglib_DATA = initial-fstab
+
+EXTRA_DIST = nfsroot initial-fstab
