@@ -28,7 +28,6 @@
 #
 prog=rc.nfsroot-kdump
 configfile=/etc/sysconfig/nfsroot
-KDUMP_DIR=dumphost:/var/crash
 KDUMP_DIR_MOUNTOPTS="nfsvers=3,rw,nolock"
 KDUMP_LEVEL=31
 KDUMP_FAILSAFE=reboot
@@ -37,8 +36,7 @@ if [ -f $configfile ]; then
 fi
 export PATH=/bin:/sbin:/usr/bin:/usr/sbin
 
-kdump_panic()
-{
+kdump_panic() {
    case "${KDUMP_FAILSAFE}" in
    shell)
       echo "${prog}: spawning shell so you can save /proc/vmcore manually" >&2
@@ -52,40 +50,54 @@ kdump_panic()
    reboot -f
 }
 
-# kdump init script will fail if /etc/kdump.conf is newer than initrd link
-# (as of kexec-tools-1.101-194.7). Once redhat fixes this, e.g. with a 
-# sysconfig var to ignore kdump.conf, this check should be removed.  
+guess_kdump_dir () {
+   local host
+   (while read line; do
+      set $line
+      if [ "$2" = "/" ] && echo $1|grep -q ":"; then
+          echo "$(echo $1|sed 's/:.*//'):/var/crash"
+          break
+      fi
+   done) </proc/mounts
+}
+
+# some verification in the non-kexec context
 kdump_sanity()
 {
    local ird=/boot/initrd-$(uname -r)
    local img=${ird}kdump.img
 
    if ! [ -f ${img} ]; then
-         echo "${prog}: ${img} does not exist, kdump startup will try to remake it" >&2
-         echo "${prog}: please ln -s ${ird} $(basename ${img}) and reboot me" >&2
+         echo "${prog}: ${img} does not exist" >&2
+         echo "${prog}: run nfsroot-kdumplinks on root server and reboot me" >&2
          sleep 86400
    fi
    if [ -f /etc/kdump.conf ]; then
       if [ $(stat -c "%Y" /etc/kdump.conf) -gt $(stat -c "%Y" ${img}) ]; then
-         echo "${prog}: /etc/kdump.conf is too new, kdump startup will fail" >&2
-         echo "${prog}: please touch ${img} on server and reboot me" >&2
+         echo "${prog}: /etc/kdump.conf is newer than ${img}" >&2
+         echo "${prog}: run nfsroot-kdumplinks on root server and reboot me" >&2
          sleep 86400
       fi
    fi
 }
 
-mount -n -t proc /proc /proc
-# FIXME: find a better method of detecting kexec
+# FIXME: is there a better method of detecting kexec context?
 if ! grep -q memmap=exactmap /proc/cmdline; then
    echo "${prog}: kernel was not booted via kexec" >&2
    kdump_sanity
-   umount -n /proc
    return 1
 fi
 
 if ! [ -s /proc/vmcore ]; then
    echo "${prog}: no vmcore is available" >&2
    reboot -f
+fi
+if [ -z "$KDUMP_DIR" ]; then
+   KDUMP_DIR=$(guess_kdump_dir)
+fi
+if [ -z "$KDUMP_DIR" ]; then
+   echo "${prog}: could not guess KDUMP_DIR" >&2
+   kdump_panic
 fi
 
 if ! mount -n -o ${KDUMP_DIR_MOUNTOPTS} ${KDUMP_DIR} /var/crash; then
@@ -95,11 +107,19 @@ fi
 
 # FIXME: localtime assumption may not be correct
 hwclock --hctosys --localtime
+mount -n -t tmpfs /tmp /tmp
 corefile=/var/crash/vmcore-$(hostname)-$(date +%Y-%m-%d-%T)
 vmlinux=/boot/vmlinux-$(uname -r)
-echo "${prog}: copying vmcore" >&2
-mount -n -t tmpfs /tmp /tmp
-if ! makedumpfile -c -d ${KDUMP_LEVEL} -x ${vmlinux} /proc/vmcore ${corefile}; then
+makedumpfile="makedumpfile -c -d ${KDUMP_LEVEL}"
+if [ -r $vmlinux ]; then
+   makedumpfile="$makedumpfile -x ${vmlinux}"
+else
+   echo "${prog}: no $vmlinux: dropping -x option to makedumpfile" >&2
+fi
+makedumpfile="$makedumpfile /proc/vmcore ${corefile}"
+echo "${prog}: copying vmcore"
+#echo "${prog}: $makedumpfile" >&2
+if ! $makedumpfile; then
    echo "${prog}: copy failed" >&2
    kdump_panic
 fi
